# ocaml-advent-of-code

./: .gitignore  README.md  dune-project  ocaml_advent_of_code.opam
template/: dune  main.ml
y_2024_d_01/: dune  main.ml
