(lang dune 3.16)

(name ocaml_advent_of_code)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_advent_of_code)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune core ppx_sexp_conv ppx_expect ppx_inline_test)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
